[tool.poetry]
name = "csv-to-json-api-import"
version = "0.1.0"
description = ""
authors = ["Troy Havelock <troy.havelock@snyk.io>"]
readme = "README.md"
packages = [{include = "csv_to_json_api_import"}]

[tool.poetry.scripts]
csv-to-json-api-import = "csv_to_json_api_import.main:run"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
